--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.10.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
+    "sanitize-html": "^2.7.3",
     "sequelize": "^6.25.5"
   },
   "devDependencies": {
